misc/eks-waf-reference/eks-waf-examples/security/network_security/netshoot-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-netshoot
 labels:
  app: nginx-netshoot
spec:
replicas: 1
selector:
 matchLabels:
  app: nginx-netshoot
template:
 metadata:
 labels:
  app: nginx-netshoot
 spec:
  containers:
  - name: nginx
  image: nginx:1.14.2
  ports:
- containerPort: 80
  - name: netshoot
  image: nicolaka/netshoot
  command: ["/bin/bash"]
  args: ["-c", "while true; do ping localhost; sleep 60;done"]
