misc/eks-waf-reference/eks-waf-examples/security/network_security/default-deny1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny1
  namespace: stars
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
